@@ -3,6 +3,7 @@ irrlamb 1.0.1 -
 - Added campaign progress to menu
 - Added player/orb sounds to replays
 - Added option to enable/disable gamepad
+- Added short messages for config changes
 - Fixed various bugs in house level
 - Fixed some compile warnings
 - Minor bug fixes
